Fix overflow issue in cards
The content inside cards was overflowing, causing
layout issues. This commit adjusts the CSS to
ensure that the content fits properly within the
card boundaries.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 .card-holder {
     flex-grow: 1;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 250px));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 350px));
     gap: 40px;
     justify-content: center;
     margin-top: 20px;
@@ -79,8 +79,8 @@ form{
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 330px;
     color: rgb(185, 182, 182);
     font-family: 'Courier New', Courier, monospace;
 }
@@ -210,4 +210,11 @@ form{
     z-index: -1;
     padding: 3px;
     border-radius: 5px;
+}
+.cardBox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    overflow: auto;
 }
